# sdk-addon

./: .checkpatch.conf  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: pull_request.yaml
app/: CMakeLists.txt  main.c  mnu_addon.cc  mnu_addon.hh  mnu_alarm.cc  mnu_alarm.hh  mnu_builtin.cc  mnu_builtin.hh  mnu_settings.c  mnu_settings.h  sdk_control.cc  sdk_control.h
include/: alerts_agent.hh  alerts_audio_player.hh  auto_car_control_agent.hh  auto_radio_agent.hh  base_audio_player_listener.hh  battery_agent.hh  bluetooth_agent.hh  delegation_agent.hh  device_feature_agent.hh  extension_agent.hh  location_agent.hh  mediaplayer_agent.hh  message_agent.hh  nugu_auto_agent.hh  nugu_tmap_agent.hh  phone_call_agent.hh
src/: CMakeLists.txt  alerts_agent.cc  alerts_audio_player.cc  alerts_manager.cc  alerts_manager.hh  auto_car_control_agent.cc  auto_radio_agent.cc  base_audio_player_listener.cc  battery_agent.cc  bluetooth_agent.cc  delegation_agent.cc  device_feature_agent.cc  extension_agent.cc  location_agent.cc  mediaplayer_agent.cc  message_agent.cc  nugu_auto_agent.cc  nugu_tmap_agent.cc  phone_call_agent.cc
tests/: CMakeLists.txt  test_alarm.cc
